# YC-POC

./: .gitignore  .replit  README.md  main.py  pyproject.toml  replit.nix
.streamlit/: config.toml
chroma_store/: chroma.sqlite3
components/: file_upload.py  query_interface.py  results_display.py
models/: document.py  vector_document.py
services/: database.py  file_handler.py  llm_service.py  vector_store.py  web_scraper.py
utils/: constants.py  query_templates.py  validators.py
