[project]
name = "repl-nix-dataingestpromptquery"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "chromadb>=0.5.18",
    "langchain-community>=0.3.5",
    "langchain-core>=0.3.15",
    "langchain-openai>=0.2.6",
    "langchain>=0.3.7",
    "markdown>=3.7",
    "openai>=1.54.3",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.24.13",
    "python-docx>=1.1.2",
    "sqlalchemy>=2.0.35",
    "streamlit>=1.40.0",
]
